--- a/tech_doc_style.css
+++ b/tech_doc_style.css
@@ -5,6 +5,7 @@
     margin-left: 310px;
     padding: 20px;
     margin-bottom: 110px;
+    list-style-type: none;
 }
 
 #navbar{
@@ -16,6 +17,29 @@
     height: 100%;
     border-right: solid;
     border-color: rgba(0, 22,22, 0.4);
+    
 }
 
+li{list-style-type: none;}
+
 nav{display: block;}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
